--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,9 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "firebase-admin": "^12.6.0"
+    "firebase-admin": "^12.6.0",
+    "gridfs-stream": "^1.1.1",
+    "mongoose": "^8.7.3",
+    "multer": "^1.4.5-lts.1"
   }
 }
