frontend with camera, user, and history page

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -14,7 +14,7 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.frontend"
+      "bundleIdentifier": "com.dsu.imgtosong"
     },
     "android": {
       "adaptiveIcon": {
