--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "mongo": "^0.1.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.8.1"
   }
 }
