--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.0.2",
+    "bcrypt": "^5.1.1",
     "expo": "~51.0.28",
     "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
