--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,14 +35,19 @@
     "react-dom": "^18.3.1",
     "react-native": "0.76.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "6.4.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tab-view": "^3.5.2",
+    "react-native-video": "^6.8.0",
     "react-native-web": "~0.19.10",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "expo-video": "~2.0.1",
+    "react-native-svg": "15.8.0",
+    "expo-av": "~15.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
