--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^6.0.2",
     "bcrypt": "^5.1.1",
     "expo": "^52.0.7",
+    "expo-av": "~15.0.1",
     "expo-camera": "~16.0.5",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
@@ -30,6 +31,7 @@
     "expo-splash-screen": "~0.29.10",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
+    "expo-video": "~2.0.1",
     "expo-web-browser": "~14.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -40,14 +42,12 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
+    "react-native-svg": "15.8.0",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tab-view": "^3.5.2",
     "react-native-video": "^6.8.0",
     "react-native-web": "~0.19.10",
-    "socket.io-client": "^4.8.1",
-    "expo-video": "~2.0.1",
-    "react-native-svg": "15.8.0",
-    "expo-av": "~15.0.1"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
